--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Click.click</title>
+    
 </head>
 <body>
     <section>
         <div class="main">
             <div class="left">
-                <h3>Gem: 0</h3>
+                <h3>Gem 0</h3>
                 <img src="assets/pen.png" alt="">
+            </div>
+            <div class="rigth">
+                rigth
             </div>
         </div>
     </section>
