--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Click.click</title>
-    
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section>
         <div class="main">
             <div class="left">
-                <h3>Gem 0</h3>
-                <img src="assets/pen.png" alt="">
+                <h3>Gem <span class="cost">0</span></h3>
+                <img src="assets/pen.png" alt="" class="click-img" onclick="incrementPen()">
             </div>
             <div class="rigth">
                 rigth
             </div>
         </div>
     </section>
+    <script src="index.js"></script>
 </body>
 </html>
